--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
     "express": "^4.17.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "typescript": "^4.6.2",
+    "react-router-dom": "^6.2.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "build:server": "webpack --env=server",
     "build:client": "webpack --env=web",
-    "start": "webpack && node ./build/server.js",
+    "start:ssr": "webpack && node ./build/server.js",
+    "start:ssr-live": "webpack --config webpack.config.js --watch --mode=development & babel src -d build --watch & nodemon build/server.js",
+    "start:react": "react-scripts start",
     "build": "npm run build:server && npm run build:client",
-    "start:web": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -52,10 +53,13 @@
     "fs": "^0.0.1-security",
     "mini-css-extract-plugin": "^2.5.3",
     "node-polyfill-webpack-plugin": "^1.1.4",
+    "nodemon": "^2.0.15",
     "raw-loader": "^4.0.2",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.2.7",
+    "ts-node": "^10.6.0",
+    "typescript": "^4.6.2",
     "webpack-cli": "^4.9.2",
     "webpack-manifest-plugin": "^4.1.1",
     "webpack-node-externals": "^3.0.0"
