--- a/package.json
+++ b/package.json
@@ -9,19 +9,18 @@
     "@types/jest": "^27.4.1",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
+    "copy-webpack-plugin": "^10.2.4",
+    "ejs": "^3.1.6",
     "express": "^4.17.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
-    "styled-components": "^5.3.3",
-    "web-vitals": "^2.1.4"
+    "styled-components": "^5.3.3"
   },
   "scripts": {
-    "build:server": "webpack --env=server",
-    "build:client": "webpack --env=web",
-    "start:ssr": "webpack && node ./build/server.js",
+    "start:ssr": "webpack --config webpack.config.js && node ./build/server.js",
     "start:ssr-live": "webpack --config webpack.config.js --watch --mode=development & babel src -d build --watch & nodemon build/server.js",
-    "start:react": "react-scripts start",
+    "start:react": "cross-env REACT_APP_IS_REACT=true && react-scripts start",
     "build": "npm run build:server && npm run build:client",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
