layout search blank pag

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,9 @@
       "src":[
         "src/*"
       ],
-      "server/*": [
+      "server": [
         "server/*"
-      ]
+      ],
     },
   },
   "include": [
