--- a/package.json
+++ b/package.json
@@ -9,13 +9,21 @@
     "@types/jest": "^27.4.1",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
+    "@types/react-redux": "^7.1.23",
+    "@types/redux": "^3.6.0",
     "copy-webpack-plugin": "^10.2.4",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
-    "styled-components": "^5.3.3"
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
+    "styled-components": "^5.3.3",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start:ssr": "webpack --config webpack.config.js && node ./build/server.js",
@@ -45,6 +53,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/lodash": "^4.14.179",
     "@types/node": "^17.0.21",
     "@types/styled-components": "^5.1.24",
     "buffer": "^6.0.3",
@@ -59,7 +68,7 @@
     "react-scripts": "^5.0.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.2.7",
-    "ts-node": "^10.6.0",
+    "ts-node": "^10.7.0",
     "typescript": "^4.6.2",
     "webpack-cli": "^4.9.2",
     "webpack-manifest-plugin": "^4.1.1",
