--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "strict": true,
     "moduleResolution": "node",
     "jsx": "react",
+    "noImplicitAny": false,
     "baseUrl": ".",
     "paths": {
       "src":[
