--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@types/react-dom": "^17.0.13",
     "@types/react-redux": "^7.1.23",
     "@types/redux": "^3.6.0",
+    "axios": "^0.26.0",
     "copy-webpack-plugin": "^10.2.4",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-paginate": "^8.1.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "redux": "^4.1.2",
