--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "lodash": "^4.17.21",
+    "query-string": "^7.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-paginate": "^8.1.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
+    "react-tabs": "^4.0.1",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
