--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "raw-loader": "^4.0.2",
     "react-scripts": "^5.0.0",
     "style-loader": "^3.3.1",
+    "styled-loader": "^0.0.0",
     "ts-loader": "^9.2.7",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2",
