--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "heroku-postbuild": "webpack -p --config webpack.config.js --progress",
+    "heroku-postbuild": "webpack --mode production --config webpack.config.js --progress",
     "start": "node ./build/server.js",
     "start:ssr": "webpack --config webpack.config.js && node ./build/server.js",
     "start:ssr-live": "webpack --config webpack.config.js --watch --mode=development & babel src -d build --watch & nodemon build/server.js",
